[tool.poetry]
name = "hh-applicant-tool"
version = "0.9.0"
description = "HH-Applicant-Tool: An automation utility for HeadHunter (hh.ru) designed to streamline the job search process by auto-applying to relevant vacancies and periodically refreshing resumes to stay at the top of recruiter searches."
homepage = "https://github.com/s3rgeym/hh-applicant-tool"
repository = "https://github.com/s3rgeym/hh-applicant-tool"
# Впишите себя, кто причастен к каким-либо изменениям
authors = ["Senior YAML Developer <yamldeveloper@proton.me>"]
readme = "README.md"
packages = [{include = "hh_applicant_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.32.3"}
prettytable = "^3.6.0"
playwright = "^1.57.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.16.4"
pytest = "^7.2.2"
ruff = "^0.14.9"
basedpyright = "^1.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hh-applicant-tool = "hh_applicant_tool.main:main"

# Он заебал агриться на старый код, который был написан до появления агрессивной
# проверки типов в pyright
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Ошибки показывать он не бросит, но заебывать перестанет
typeCheckingMode = "off"

[tool.ruff]
select = ["E", "F"]
